--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.8.1",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.475.0",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
